--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "node --watch src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "socket.io": "^4.8.1"
+    "mongoose": "^8.12.1",
+    "mongoose-paginate-v2": "^1.9.0",
+    "socket.io": "^4.8.1",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
