--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node --watch src/app.js"
+    "start": "node src/server.js",
+    "dev": "node --watch src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,18 @@
   "description": "",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "mongoose-paginate-v2": "^1.9.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.8.1",
     "sweetalert2": "^11.6.13"
   },
