Agregamos mail de bienvenida con nodemailer en el registro de user

--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,5 @@
 
 MONGO_URI=mongodb+srv://tu_usuario:tu_password@tu_cluster.mongodb.net/tu_base_de_datos
 JWT_SECRET=xxx
+NODEMAILER_USER=nico123@ethereal.email
+NODEMAILER_PASS=claveGenerada
