Agregado de logica de recuperacion de password

--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,4 @@ MONGO_URI=mongodb+srv://tu_usuario:tu_password@tu_cluster.mongodb.net/tu_base_de
 JWT_SECRET=xxx
 NODEMAILER_USER=nico123@ethereal.email
 NODEMAILER_PASS=claveGenerada
+BACKEND_URL=http://localhost:8080
