Actualizo env example

--- a/.env-example
+++ b/.env-example
@@ -2,6 +2,6 @@
 
 MONGO_URI=mongodb+srv://tu_usuario:tu_password@tu_cluster.mongodb.net/tu_base_de_datos
 JWT_SECRET=xxx
-NODEMAILER_USER=nico123@ethereal.email
+NODEMAILER_USER=<nico123@ethereal.email>
 NODEMAILER_PASS=claveGenerada
-BACKEND_URL=http://localhost:8080
+BACKEND_URL=<http://localhost:8080>
